--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
+    <h1>React Virtualizer Example</h1>
     <div id="target"/>
     <script src="/build/js/react.vendor.js" charset="utf-8"></script>
     <script src="/build/js/vendor.js" charset="utf-8"></script>
