add react 16 migration guide partially

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="prerender" href="https://build-mbfootjxoo.now.sh/">
   </head>
   <body>
-    <h1>React Virtualizer Example</h1>
-    <div id="target"/>
+    <div id="target"></div>
+    <div id="portalTarget"></div>
     <script src="/build/js/react.vendor.js" charset="utf-8"></script>
     <script src="/build/js/vendor.js" charset="utf-8"></script>
     <script src="/build/js/main.js" charset="utf-8"></script>
